--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Email::MIME::XPath.
 
+0.002   2007-04-20
+        bugfix for single-part messages -- hdp
+
 0.001   2007-04-20
         original version -- hdp
