Import of HDP/Email-MIME-XPath-0.003 from CPAN.
gitpan-cpan-distribution: Email-MIME-XPath
gitpan-cpan-version:      0.003
gitpan-cpan-path:         HDP/Email-MIME-XPath-0.003.tar.gz
gitpan-cpan-author:       HDP
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Email::MIME::XPath.
 
+0.003   2007-04-21
+        add prereqs to Makefile.PL -- hdp
+
 0.002   2007-04-20
         bugfix for single-part messages -- hdp
 
